--- a/WeCanFixIt/appsettings.json
+++ b/WeCanFixIt/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WeCanFixItDb": "data source=(localdb)\\WeCanFixItDb; initial catalog=Tutorialsdb integration security=SSPI"
+  }
