Add cascade droplist

--- a/WeCanFixIt/appsettings.json
+++ b/WeCanFixIt/appsettings.json
@@ -1,4 +1,8 @@
 ﻿{
+  "ConnectionStrings": {
+    "Defaultconnection": "data source=(localdb)\\Tutorials; Database=TutorialsDb; Trusted_Connection=true; MultipleActiveResultSets=true;"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,7 +10,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "WeCanFixItDb": "data source=(localdb)\\WeCanFixItDb; initial catalog=Tutorialsdb integration security=SSPI"
-  }
+  "AllowedHosts": "*"
+}
